--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Angelo Mendonca <angelomendonca@gmail.com>
 Ben Motz <bmotz@cray.com>
 Bertrand Lallau <bertrand.lallau@thalesgroup.com>
 Brad Klein <bradley.klein@twcable.com>
+Cao Xuan Hoang <hoangcx@vn.fujitsu.com>
 Clenimar Filemon <clenimar.filemon@gmail.com>
 Craig Bryant <craig.bryant@hp.com>
 David C Kennedy <david.c.kennedy@hp.com>
@@ -12,6 +13,10 @@ Deklan Dieterly <dieterly@gmail.com>
 Derrick Johnson <derrick.johnson@hp.com>
 Derrick Johnson <johnson.derrick@gmail.com>
 Dexter Fryar <dexter.fryar@outlook.com>
+Dobroslaw Zybort <dobroslaw.zybort@ts.fujitsu.com>
+Doug Hellmann <doug@doughellmann.com>
+Erickson Santos <erickson@lsd.ufcg.edu.br>
+Flávio Ramalho <flaviosr@lsd.ufcg.edu.br>
 Ghanshyam <ghanshyam.mann@nectechnologies.in>
 Haiwei Xu <xu-haiwei@mxw.nes.nec.co.jp>
 Igor Natanael <igornsa@lsd.ufcg.edu.br>
@@ -22,8 +27,10 @@ Jonathan Halterman <jhalterman@gmail.com>
 Jonathan Halterman <jhalterman@hp.com>
 Kaiyan Sheng <kaiyan.sheng@hp.com>
 Koji Nakazono <nakazono_0507@jp.fujitsu.com>
+Laszlo Hegedus <laszlo.hegedus@ericsson.com>
 LiuNanke <nanke.liu@easystack.cn>
 Lukasz Zajaczkowski <Lukasz.Zajaczkowski@ts.fujitsu.com>
+Matteus Silva <silvamatteus@lsd.ufcg.edu.br>
 Michael Bielinski <michael.bielinski@hp.com>
 Michael James Hoppal <michael.jam.hoppal@hp.com>
 Michal Zielonka <michal.zielonka@ts.fujitsu.com>
@@ -49,6 +56,7 @@ bklei <bradley.klein@twcable.com>
 cindy oneill <cindy.o-neill@hp.com>
 dieterly <deklan.dieterly@hpe.com>
 gary-hessler <gary.hessler@hp.com>
+haali1 <haneef.ali@hp.com>
 henriquetruta <henrique@lsd.ufcg.edu.br>
 hochmuth <roland.hochmuth@hp.com>
 kaiyan-sheng <kaiyan.sheng@hp.com>
